--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -2,6 +2,7 @@
 name = "snesemu-gui"
 version = "0.1.0"
 authors = ["Konrad Borowski <xfix@protonmail.com>"]
+license = "GPL-3.0+"
 
 [dependencies]
 minifb = "0.9.0"
