--- a/cpu/Cargo.toml
+++ b/cpu/Cargo.toml
@@ -2,6 +2,7 @@
 name = "snesemu-cpu"
 version = "0.1.0"
 authors = ["Konrad Borowski <xfix@protonmail.com>"]
+license = "GPL-3.0+"
 
 [dependencies]
 bitflags = "0.8.0"
